my-cicd-project-day3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort
  selector: 
      app: python-app
      tier: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
